# STL-onboarding

./: .env.example  AGENTS.md  AGENTS_en.md  Justfile  README.md  README_en.md  pyproject.toml
automation/: __init__.py  backend_cloud_run_service.py  backend_integration_test_service.py  envfile.py  n8n_api.py  n8n_bootstrap_service.py  n8n_cloud_run_service.py  n8n_integration_test_service.py  notion_api.py  notion_db_service.py  notion_schema.py  redis_service.py
backend/: Dockerfile  __init__.py  cloudbuild.yaml
backend/app/: api_errors.py  asgi.py  auth.py  dependencies.py  main.py  models.py  n8n_gateway.py  notion_gateway.py  redis_store.py  services.py  settings.py
docs/: assignment.md  assignment_en.md  prd.md  prd_en.md  qna.md  qna_en.md
docs/adr/: 000_index.md  000_index_en.md  001_프론트엔드_배포_전략으로_Vercel_정적_배포_채택.md  001_프론트엔드_배포_전략으로_Vercel_정적_배포_채택_en.md  002_Notion_및_메일_오케스트레이션_책임으로_n8n_워크플로우_채택.md  002_Notion_및_메일_오케스트레이션_책임으로_n8n_워크플로우_채택_en.md  AGENTS.md  (+11 more)
frontend/: app.js  config.js  index.html  styles.css  vercel.json
scripts/: __init__.py  backend_cloud_run.py  backend_integration_test.py  frontend_dev_server.py  n8n_bootstrap.py  n8n_cloud_run.py  n8n_integration_test.py  notion_db.py  redis_instance.py
tests/: test_backend_api.py  test_backend_api_concurrency.py  test_backend_cloud_run_service.py  test_backend_n8n_gateway.py  test_backend_notion_gateway.py  test_backend_services.py  test_n8n_bootstrap_service.py  test_n8n_cloud_run_service.py  test_notion_api.py  test_notion_db_service.py  test_notion_schema.py  test_redis_service.py
(+10 files in other folders)
